--- a/markup/html-css/CSS/style.css
+++ b/markup/html-css/CSS/style.css
@@ -1,28 +1,447 @@
 /*全体のスタイル（CSSリセット用）*/
-*{
+* {
     /* padding,borderが要素の中に入る */
-    box-sizing:border-box;
+    box-sizing: border-box;
 }
-ul{
+ul {
     /* リストの・を消す */
     list-style: none;
-    margin:0;
+    margin: 0;
 }
 
-h1,h2,h3,h4,h5,h6,p,span,button{
-    margin:0;
-    padding:0;
-    font-weight:normal;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+button {
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
 }
 
-a{
-    color:inherit; 
+a {
+    color: inherit;
     /* 文字の下の線を消す */
-    text-decoration:none;   
+    text-decoration: none;
 }
 
-body{
-    color:#555;
-    margin:0;
-    line-height:1.6;
+img {
+    vertical-align: bottom;
+    max-width: 100%;
+}
+
+.title-b {
+    font-weight: bold;
+}
+
+body {
+    color: #555;
+    margin: 0;
+    line-height: 1.6;
+}
+
+/* header */
+header {
+    width: 100%;
+    display: flex;
+    /* 子要素を親要素の両端に配置 */
+    justify-content: space-between;
+    padding: 0 20px;
+    color: #fff;
+    /* 背景色をblackにして綺麗に表示されていたらblackをinheritに変更 */
+    position: absolute;
+    z-index: 99999;
+}
+
+.header-logo {
+    padding: 20px 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.header-nav ul {
+    display: flex;
+    padding: 22px 0;
+}
+
+.header-nav li {
+    /* li要素同士の余白 */
+    margin-left: 55px;
+    font-size: 15px;
+}
+
+footer {
+    font-family: Arial Rounded MT Bold;
+    height: 50px;
+    background-color: #191919;
+}
+
+.company-info {
+    text-align: center;
+    font-size: 12px;
+    line-height: 50px;
+    color: #fff;
+}
+
+/* first-view */
+#first-view {
+    height: 770px;
+    width: 100%;
+    background-image: url('../img/bg1.png');
+    background-size: cover;
+}
+
+.first-v-wrap {
+    margin-top: 285px;
+    margin: 0 auto;
+    width: 220px;
+    text-align: center;
+    position: relative;
+    top: 285px;
+}
+
+.first-v-title {
+    color: #fff;
+    font-size: 27px;
+    font-weight: bold;
+}
+
+.first-v-title:after {
+    display: block;
+    content: '';
+    width: 100px;
+    margin: 20px auto 0;
+    /* 線を作る */
+    border-bottom: 1px solid #fff;
+}
+
+.first-v-btn {
+    margin-top: 150px;
+    width: 200px;
+    height: 50px;
+    background: transparent
+        linear-gradient(90deg, #06beb6 0%, #1a719a 52%, #283c86 100%) 0% 0%
+        no-repeat padding-box;
+    box-shadow: 0px 5px 0px #070707;
+    border-radius: 5px;
+    opacity: 1;
+    border: none;
+    color: #fff;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.first-v-btn i {
+    margin-right: 4px;
+    width: 15px;
+}
+
+#entry {
+    padding: 175px 0;
+}
+
+#entry .entry-wrap {
+    margin: 0 auto;
+    width: 320px;
+    text-align: center;
+}
+
+#entry .entry-title {
+    color: #191919;
+    font-size: 18px;
+    font-family: 'Hiragino Sans';
+    font-weight: bold;
+}
+
+#entry .entry-btn {
+    margin-top: 55px;
+    width: 100%;
+    height: 47px;
+    background: transparent
+        linear-gradient(90deg, #06beb6 0%, #1a719a 52%, #283c86 100%) 0% 0%
+        no-repeat padding-box;
+    box-shadow: 0px 5px 0px #070707;
+    border-radius: 5px;
+    opacity: 1;
+    border: none;
+    color: #fff;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+#entry .entry-btn i {
+    margin-right: 4px;
+    width: 15px;
+}
+
+/* about */
+#about {
+    padding: 90px 0;
+    background-color: #f8f8f8;
+}
+
+#about .inner {
+    width: 1100px;
+    margin: 0 auto;
+}
+
+#about .title {
+    font-size: 18px;
+    color: #191919;
+    font-style: italic;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 60px;
+    line-height: 1;
+}
+
+#about .title::before {
+    /* 擬似要素には必ずつける */
+    display: inline-block;
+    width: 30px;
+    border-top: 1px solid #191919;
+    content: '';
+}
+
+#about .title::after {
+    /* 擬似要素には必ずつける */
+    display: inline-block;
+    width: 30px;
+    border-top: 1px solid #191919;
+    content: '';
+}
+
+#about .about-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 47px 100px;
+}
+
+#about .about-item {
+    flex: 1 1 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+    padding: 35px 0 40px;
+}
+
+#about .about-title__title {
+    font-size: 22px;
+    font-weight: bold;
+    color: #191919;
+    margin-bottom: 20px;
+    line-height: 1.2;
+}
+
+#about .about-item__img {
+    margin-bottom: 25px;
+}
+
+#about .about-item__desc {
+    font-size: 13px;
+    width: 200px;
+    line-height: calc(23 / 13);
+}
+
+/* News */
+#news {
+    width: 100%;
+    height: 660px;
+    background-image: url('../img/bg2.png');
+    background-size: cover;
+    padding: 90px 0;
+}
+
+#news .inner {
+    width: 1100px;
+    margin: 0 auto;
+}
+
+#news .title {
+    font-size: 18px;
+    font-weight: bold;
+    color: #fff;
+    font-style: italic;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 60px;
+    line-height: 1;
+}
+
+#news .title::before {
+    /* 擬似要素には必ずつける */
+    display: inline-block;
+    width: 30px;
+    border-top: 1px solid #fff;
+    content: '';
+}
+
+#news .title::after {
+    /* 擬似要素には必ずつける */
+    display: inline-block;
+    width: 30px;
+    border-top: 1px solid #fff;
+    content: '';
+}
+
+#news .news-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 46px;
+}
+
+#news .news-item {
+    flex: 1 1 336px;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    color: #191919;
+}
+
+#news .news-item__img img {
+    width: 100%;
+    height: 207px;
+    object-fit: cover;
+}
+
+#news .news-date {
+    font-weight: bold;
+    font-size: 10px;
+    line-height: 1;
+    margin-bottom: 8px;
+}
+
+#news .news__title {
+    font-size: 14px;
+    font-weight: bold;
+
+    margin-bottom: 20px;
+    line-height: 1;
+}
+
+#news .news-text {
+    padding: 20px 20px 50px;
+}
+
+#news .news-item__desc {
+    font-size: 12px;
+    line-height: 1.5;
+}
+
+#contact {
+    display: block;
+    width: 100%;
+    height: 850px;
+    background-image: url('../img/bg3.png');
+    background-size: cover;
+    color: #fff;
+    padding: 90px 0;
+    font-size: 15px;
+    line-height: 1;
+}
+
+#contact .inner {
+    width: 600px;
+    margin: 0 auto;
+}
+
+#contact .title {
+    font-size: 18px;
+    font-weight: bold;
+    color: #fff;
+    font-style: italic;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 60px;
+    line-height: 1;
+}
+
+#contact .title::before {
+    /* 擬似要素には必ずつける */
+    display: inline-block;
+    width: 30px;
+    border-top: 1px solid #fff;
+    content: '';
+}
+
+#contact .title::after {
+    /* 擬似要素には必ずつける */
+    display: inline-block;
+    width: 30px;
+    border-top: 1px solid #fff;
+    content: '';
+}
+
+#contact .contact-caution {
+    font-weight: 300;
+    margin-bottom: 25px;
+}
+
+#contact .contact-caution::before {
+    content: '*';
+    display: inline-block;
+    color: red;
+    margin-right: 3px;
+}
+
+#contact .contact-box:not(:last-of-type) {
+    margin-bottom: 33px;
+}
+
+#contact .contact-text {
+    margin-bottom: 10px;
+}
+
+#contact .contact-text::after {
+    content: '*';
+    display: inline-block;
+    color: red;
+    margin-left: 3px;
+}
+
+#contact input,
+#contact .select-box {
+    width: 100%;
+    height: 55px;
+    border-radius: 7px;
+    padding: 20px 15px;
+}
+
+#contact .select-box {
+    appearance: none;
+}
+
+#contact .contact-box:nth-of-type(3) {
+    position: relative;
+}
+
+#contact .contact-box:nth-of-type(3)::after {
+    position: absolute;
+    background: url('../img/arrow.png');
+    background-size: 100%;
+    display: block;
+    content: '';
+    width: 15px;
+    height: 15px;
+    top: 60%;
+    right: 15px;
+}
+
+#contact textarea {
+    width: 100%;
+    height: 185px;
+    padding: 20px 15px;
+    border-radius: 7px;
 }
