コードのレビューをお願いいたします。

--- a/js-easy/fizzbuzz/style.css
+++ b/js-easy/fizzbuzz/style.css
@@ -1,6 +1,6 @@
 /* 追加チャレンジ問題 */
 
-/* body {
+body {
   text-align: center;
 }
 
@@ -9,4 +9,4 @@
   margin: 0 auto;
 } */
 
-/* 追加チャレンジ問題 ここまで */
+/* 追加チャレンジ問題 ここまで
