--- a/markup/responsive/Sass/_header.scss
+++ b/markup/responsive/Sass/_header.scss
@@ -14,7 +14,27 @@ header {
     }
     .ham {
         display: none;
+        @include tab {
+            display: flex;
+            width: 2.5rem;
+            height: 1.4rem;
+            justify-content: space-between;
+            flex-direction: column;
+            span {
+                display: inline-block;
+                width: 100%;
+                height: 1px;
+                background-color: #fff;
+            }
+        }
     }
+
+    @include tab {
+        .pc-navmenu {
+            display: none;
+        }
+    }
+
     .pc-navmenu ul {
         display: flex;
         gap: 55px;
