--- a/markup/responsive/Sass/_lib.scss
+++ b/markup/responsive/Sass/_lib.scss
@@ -1,3 +1,25 @@
+/* mixin */
+// PC画面サイズ以上
+@mixin pc {
+    @media (min-width: 1025px) {
+        @content;
+    }
+}
+
+// タブレット画面
+@mixin tab {
+    @media (max-width: 1024px) {
+        @content;
+    }
+}
+
+// スマホ画面
+@mixin sp {
+    @media (max-width: 599px) {
+        @content;
+    }
+}
+
 /* 共通部分 */
 html {
     font-size: 62.5%; //10px=1remになる
@@ -13,3 +35,46 @@ $cWhite: #fff;
 $cBlack: #191919;
 $sky: #06beb6;
 $navy: #283c86;
+
+.inner {
+    width: 80%;
+    // 要素を真ん中に配置
+    margin: 0 auto;
+    padding: 90px 0;
+    @include tab {
+        width: calc(336 / 375) * 100vw;
+        padding: 50px 0;
+    }
+}
+
+.title {
+    display: flex;
+    font-size: 1.8rem;
+    font-style: italic;
+    align-items: center;
+    justify-content: center;
+    line-height: calc(20 / 18);
+    margin-bottom: 6rem;
+    @include tab {
+        margin-bottom: 4rem;
+    }
+    &::before {
+        content: '';
+        display: inline-block;
+        border-top: 1px solid $cBlack;
+        width: 2.5rem;
+        margin-right: 1.75rem;
+    }
+
+    &::after {
+        content: '';
+        display: inline-block;
+        border-top: 1px solid $cBlack;
+        width: 2.5rem;
+        margin-left: 1.75rem;
+    }
+
+    &--b {
+        font-weight: bold;
+    }
+}
