--- a/js-hard/slotmachine/style.css
+++ b/js-hard/slotmachine/style.css
@@ -1,26 +1,26 @@
 body {
-  text-align: center;
+    text-align: center;
 }
 p {
-  display: inline-block;
-  font-size: 30px;
+    display: inline-block;
+    font-size: 30px;
 }
 #setTime {
-  width: 100;
+    width: 100;
 }
 #startTimer {
-  display: block;
-  margin: 0 auto;
+    display: block;
+    margin: 0 auto;
 }
 
 /*  チャレンジ問題 */
 
-/* .slot-wrap {
-  height: 160px;
+.slot-wrap {
+    height: 160px;
 }
 
 .slot {
-  height: 40px;
-} */
+    height: 40px;
+}
 
 /*  チャレンジ問題  ここまで */
